Fixed invalid url of image and changed styles tomake it visible in one screen

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -388,15 +388,12 @@ footer {
 }
 
 /**
-* Photo details
+* Editing image styles
 */
-/*.upvote, .downvote{
-  width: 50px;
-  height: 50px;
-  font-size: 24px;
-  margin: 0;
-}*/
-
+.edit-image{
+  width: 50vw;
+  height: auto;
+}
 
 /**
 * Footer styles
